--- a/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
+++ b/example/prometheus-operator-crd/monitoring.coreos.com_alertmanagers.yaml
@@ -2238,6 +2238,15 @@ spec:
                   Use case is e.g. spanning an Alertmanager cluster across Kubernetes
                   clusters with a single replica in each.
                 type: boolean
+              globalAlertmanagerConfig:
+                description: GlobalAlertmanagerConfig used to set the global alertmanager
+                  config.
+                properties:
+                  name:
+                    description: Name specify the gloal AlertmanagerConfig name which
+                      is in the same namespace with alertmanager.
+                    type: string
+                type: object
               image:
                 description: Image if specified has precedence over baseImage, tag
                   and sha combinations. Specifying the version is still necessary
