--- a/bundle.yaml
+++ b/bundle.yaml
@@ -16380,6 +16380,23 @@ spec:
                   logLevel:
                     description: LogLevel for Thanos sidecar to be configured with.
                     type: string
+                  loggingConfig:
+                    description: LoggingConfig configures request logging in Thanos.
+                    properties:
+                      key:
+                        description: The key to select.
+                        type: string
+                      name:
+                        description: 'Name of the referent. More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                          TODO: Add other useful fields. apiVersion, kind, uid?'
+                        type: string
+                      optional:
+                        description: Specify whether the ConfigMap or its key must
+                          be defined
+                        type: boolean
+                    required:
+                    - key
+                    type: object
                   minTime:
                     description: MinTime for Thanos sidecar to be configured with.
                       Option can be a constant time in RFC3339 format or time duration
